[package]
name = "cargo-arc-md"
version = "0.1.0"
authors = ["Julio Iglesias Pérez - julioiglesiasp - merovingioops"]
edition = "2021"
description = "Generate AI-optimized markdown documentation from cargo-arc analysis"
repository = "https://github.com/MerovingioOps/cargo-arc-md"
license = "MIT OR Apache-2.0"
keywords = [
  "cargo",
  "dependencies",
  "architecture",
  "visualization",
  "workspace",
  "markdown",
  "mermaid",
  "cargo-arc documentation",
]
readme = "README.md"

[dependencies]
cargo_metadata = "0.23"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
